--- a/dream-keeper.html
+++ b/dream-keeper.html
@@ -56,11 +56,12 @@
         <div class="project-info-block">
             <div class="project-info-img">
                 <img  src="img/dream-keeper-photos/dream-keeper1.jpg" alt="dream keeper photos">
+                
             </div>
             <!-- <h3 class="text-secondary">Biography</h3> -->
             <div class="project-info-text-container">
               <p class="project-info-text">
-                Dream Keeper is a personalized, immersive website in which to place your memories and dreams. So much time is spent these days on throw away social media. Who remembers what they posted last month? Or last week for that matter. Dream keeper is an evolution of the photo album, where you can display photos and videos in a 3D virtual reality environment custom created to your liking. A modern website for thoughts and experiences you want to keep.
+                Dream Keeper is a personalized, immersive website in which to place your memories and dreams. So much time is spent these days on throw away social media. Who remembers what they posted last month? Or last week for that matter. Dream keeper is an evolution of the photo album, where you can display photos and videos in a virtual reality environment custom created to your liking. A modern website for thoughts and experiences you want to keep.
                </p>
             </div>
         </div>
@@ -68,7 +69,7 @@
         <div class="project-info-block" >
             <div class="project-info-text-container">
                 <p class="project-info-text">
-                  WebVR is an open technology that brings virutal reality to the browser. Dream Keeper is powered by WebVR, which means you will be able to access your site from any number of compatible devices from Android and Google smartphones to the Occulus Rift, HTC Vive, and much more. See <a href="https://webvr.info/">WebVR's site</a> for a complete listing of approved devices and browsers. Basically, Dream Keeper lives on the web will be accessible by almost any VR technology.
+                  WebVR is an open technology that brings virtual reality to the browser. Dream Keeper is powered by WebVR, which means you will be able to access your site from any number of compatible devices from Android and Google smartphones to the Occulus Rift, HTC Vive, and much more. See <a href="https://webvr.info/">WebVR's site</a> for a complete listing of approved devices and browsers. Basically, Dream Keeper lives on the web will be accessible by almost any VR technology.
                </p>
               </div>
       
