--- a/video-production.html
+++ b/video-production.html
@@ -113,7 +113,7 @@
         <ul>
           <li>
               <span class="credit-title">USCellular Holiday Campaign </span> - 2015
-            <p class="credit-description">Managed gear, provided assistant to the camera operators.</p>
+            <p class="credit-description">Managed gear, provided assistance to the camera operators.</p>
           </li>
         </ul>
         <h3>Production Assistant</h3>
