--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <span class="text-secondary">Milotte</span>
             </h1>
             <h2 id="home-main-sm-heading" class="sm-heading">
-                VR Developer, Musician,<br class="mobile-line-break" />
+                XR Developer, Musician,<br class="mobile-line-break" />
                 2nd Cam / AC
             </h2>
             <div class="icons">
@@ -131,6 +131,20 @@
 
                     <div class="glider">
                         <figure>
+                            <a href="loveseat.html">
+                                <div class="home-project-container">
+                                    <span
+                                        >Loveseat &nbsp
+                                        <i class="fas fa-vr-cardboard"></i
+                                    ></span>
+                                    <img
+                                        src="img/projects/loveseat-poster-black-bars.jpg"
+                                        alt="Loveseat"
+                                    />
+                                </div>
+                            </a>
+                        </figure>
+                        <figure>
                             <a href="zorblok.html">
                                 <div class="home-project-container">
                                     <span
@@ -144,6 +158,7 @@
                                 </div>
                             </a>
                         </figure>
+                        
                         <figure>
                             <a href="video-production.html">
                                 <div class="home-project-container">
