--- a/work.html
+++ b/work.html
@@ -57,6 +57,17 @@
     
     <div class="projects">
         <div class="item">
+            <a href="intro-to-unity.html">
+              <img src="img/projects/introtounitycover.png" alt="intro to unity">
+            </a>
+            <a href="intro-to-unity.html" class="btn-light">
+              <i class="fas fa-eye"></i> Intro To Unity
+            </a>
+            <a href="https://github.com/DustinMilotte" class="btn-dark">
+              <i class="fab fa-github"></i> Github
+            </a>
+          </div>
+          <div class="item">
             <a href="loveseat.html">
               <img src="img/projects/loveseat-poster-black-bars.jpg" alt="loveseat poster">
             </a>
