--- a/work.html
+++ b/work.html
@@ -57,17 +57,6 @@
     
     <div class="projects">
         <div class="item">
-            <a href="intro-to-unity.html">
-              <img src="img/projects/introtounitycover.png" alt="intro to unity">
-            </a>
-            <a href="intro-to-unity.html" class="btn-light">
-              <i class="fas fa-eye"></i> Intro To Unity
-            </a>
-            <a href="https://github.com/DustinMilotte" class="btn-dark">
-              <i class="fab fa-github"></i> Github
-            </a>
-          </div>
-          <div class="item">
             <a href="loveseat.html">
               <img src="img/projects/loveseat-poster-black-bars.jpg" alt="loveseat poster">
             </a>
@@ -157,6 +146,18 @@
             <i class="fab fa-bandcamp"></i> Bandcamp
           </a>
         </div>
+
+      <div class="item">
+        <a href="hypenkrunk.html">
+          <img class="album-cover" src="img/projects/hypenkrunk-cover.jpg" alt="Hypenkrunk">
+        </a>
+        <a href="hypenkrunk.html" class="btn-light">
+          <i class="fas fa-eye"></i> Hypenkrünk
+        </a>
+        <a href="https://open.spotify.com/artist/7F8ekQGIo7iYfuEKnbNsg8" class="btn-dark">
+          <i class="fab fa-spotify"></i> Spotify
+        </a>
+      </div>
 
      
       <br>
